# adm0-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  run.py  sync.py
app/: __main__.py  attributes.py  cleanup.py  continents.py  download.py  inputs.py  intersection.py  lines.py  meta.py  outputs.py  outputs_land.py  points.py  polygonize.py  polygons.py  preprocessing.py  utils.py
archive/10.2/: DoS_LSIB_v10_2_28May2021.shx  adm0_lines.csv  adm0_lines.gpkg  adm0_points.csv  adm0_points.gpkg
archive/11.0/: DoS_LSIB_v11_0_30June2022.dbf  DoS_LSIB_v11_0_30June2022.sbn  DoS_LSIB_v11_0_30June2022.sbx  adm0_lines.csv  adm0_points.csv  adm0_points.gpkg
archive/11.2/: DoS_LSIB_v11_2_01Feb2023.shx  adm0_points.csv
archive/11.3/: DoS_LSIB_v11_3_19Dec2023.dbf  DoS_LSIB_v11_3_19Dec2023.shp.xml  DoS_LSIB_v11_3_19Dec2023.shx  adm0_points.csv  adm0_points.gpkg
archive/11.3.1/: DoS_LSIB_11_3_1_30Apr2024.dbf  DoS_LSIB_11_3_1_30Apr2024.qix  DoS_LSIB_11_3_1_30Apr2024.sbn  DoS_LSIB_11_3_1_30Apr2024.sbx  DoS_LSIB_11_3_1_30Apr2024.shp.xml  DoS_LSIB_11_3_1_30Apr2024.shx  adm0_lines.csv  adm0_points.gpkg
archive/11.4/: DoS_LSIB_v11_4_24Feb2025.dbf  (+4 more)
preprocessing/: __main__.py  difference.py  utils.py
processing/: __main__.py  attributes.py  cleanup.py  continents.py  dissolve.py  download.py  inputs.py  intersection.py  land.py  lines.py  meta.py  outputs.py  outputs_land.py  points.py  polygonize.py  polygons.py  postprocessing.py  preprocessing.py  utils.py
(+26 files in other folders)
